create Tags Enum to map staffing plan tags (#1132)
* create Tags Enum to map staffing plan tags

* improve TagsUtils test suite

* fix code quality checks

* fix code quality checks

* create CreateForecastAdapter to create the input for the use case

* improve CreateForecastAdapterTest test suite

* add headcount type validation

* fix code quality checks

* fix NPE on inbound process_path

* Refactor CreateForecastAdapter manage streams instead lists

* fix code quality checks

* delete date tag before insert into DB